--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Telecom Courses</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-  <h1>📚 Telecom Course Portal</h1>
-  <p>Select your specialty:</p>
-  <ul>
-    <li><a href="specialties/rt/index.html">RT - Réseaux Télécom</a></li>
-    <li><a href="specialties/st/index.html">ST - Systèmes de Télécommunication</a></li>
-  </ul>
+
+<body class="bg-light text-center p-5">
+  <div class="container">
+    <h1 class="mb-4 text-primary">📚 Telecom Course Portal</h1>
+    <p class="lead">Select your specialty:</p>
+    <div class="d-grid gap-3 col-6 mx-auto mt-4">
+      <a class="btn btn-outline-primary btn-lg" href="specialties/rt/index.html">RT - Réseaux Télécom</a>
+      <a class="btn btn-outline-success btn-lg" href="specialties/st/index.html">ST - Systèmes de Télécommunication</a>
+    </div>
+  </div>
 </body>
+
 </html>
