--- a/specialties/rt/index.html
+++ b/specialties/rt/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>RT - Réseaux Télécom</title>
-  <link rel="stylesheet" href="../../assets/css/style.css">
+  <title>Telecom Courses</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-  <h1>📡 RT - Réseaux Télécom</h1>
-  <p>Modules disponibles :</p>
-  <ul>
-    <li><a href="#">Transmission Numérique</a></li>
-    <li><a href="#">Réseaux Informatiques</a></li>
-    <li><a href="#">Commutation</a></li>
-  </ul>
-  <a href="../../index.html">⬅️ Retour à l'accueil</a>
+
+<body class="bg-white p-5">
+  <div class="container">
+    <h1 class="text-primary mb-4">📡 RT - Réseaux Télécom</h1>
+    <p class="lead">Modules disponibles :</p>
+    <ul class="list-group mb-4">
+      <li class="list-group-item"><a href="#" class="text-decoration-none">Transmission Numérique</a></li>
+      <li class="list-group-item"><a href="#" class="text-decoration-none">Réseaux Informatiques</a></li>
+      <li class="list-group-item"><a href="#" class="text-decoration-none">Commutation</a></li>
+    </ul>
+    <a href="../../index.html" class="btn btn-secondary">⬅ Retour à l'accueil</a>
+  </div>
 </body>
+
 </html>
