Apply Bootstrap styling for cleaner design

--- a/specialties/rt/index.html
+++ b/specialties/rt/index.html
@@ -13,6 +13,9 @@
     <p class="lead">Modules disponibles :</p>
     <ul class="list-group mb-4">
       <li class="list-group-item"><a href="#" class="text-decoration-none">Transmission Numérique</a></li>
+      <li class="list-group-item"><a href="#" class="text-decoration-none">Transmission Numérique</a></li>
+      <li class="list-group-item"><a href="#" class="text-decoration-none">Transmission Numérique</a></li>
+      <li class="list-group-item"><a href="#" class="text-decoration-none">Transmission Numérique</a></li>
       <li class="list-group-item"><a href="#" class="text-decoration-none">Réseaux Informatiques</a></li>
       <li class="list-group-item"><a href="#" class="text-decoration-none">Commutation</a></li>
     </ul>
