--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body class="bg-light text-center p-5">
   <div class="container">
-    <h1 class="mb-4 text-primary">📚 Telecom Course Portal</h1>
-    <p class="lead">Select your specialty:</p>
+    <h1 class="mb-4 text-primary"> Telecom Course Portal</h1>
+    <p class="lead"> Select your specialty:</p>
     <div class="d-grid gap-3 col-6 mx-auto mt-4">
       <a class="btn btn-outline-primary btn-lg" href="specialties/rt/index.html">RT - Réseaux Télécom</a>
       <a class="btn btn-outline-success btn-lg" href="specialties/st/index.html">ST - Systèmes de Télécommunication</a>
