--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
-git add .
-git commit --allow-empty-message -m ""
-git push origin main
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Telecom Courses</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+
+<body class="bg-light d-flex flex-column min-vh-100">
+  <main class="container my-auto py-4">
+    <div class="text-center">
+      <h1 class="mb-3 text-primary fs-3">Telecom Course Portal</h1>
+      <p class="lead fs-5 mb-4">Select your specialty:</p>
+
+      <div class="d-grid gap-3 col-12 col-md-6 mx-auto">
+        <a class="btn btn-outline-primary btn-lg" href="specialties/rt/index.html">📡 RT - Réseaux Télécom</a>
+        <a class="btn btn-outline-success btn-lg" href="specialties/st/index.html">🔧 ST - Systèmes de Télécommunication</a>
+      </div>
+    </div>
+  </main>
+</body>
+</html>
