--- a/index.html
+++ b/index.html
@@ -4,50 +4,33 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Telecom Courses</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
   <style>
-    .fade-up {
-      opacity: 0;
-      transform: translateY(20px);
-      transition: all 0.6s ease;
-    }
-    .fade-up.visible {
-      opacity: 1;
-      transform: translateY(0);
+    a.btn:hover {
+      transform: scale(1.05);
+      transition: transform 0.3s ease;
     }
   </style>
 </head>
 
-<body class="bg-light d-flex flex-column min-vh-100">
-  <main class="container my-auto py-4">
-    <div class="text-center mb-4">
-      <h1 class="text-primary fs-3">Telecom Course Portal</h1>
-      <p class="lead fs-5">Select your specialty:</p>
-    </div>
+<body class="bg-light text-center py-4 px-3 px-md-5">
+  <div class="container">
+    <h1 class="mb-4 text-primary">Telecom Course Portal</h1>
+    <p class="lead">Select your specialty:</p>
 
-    <div class="row justify-content-center text-center">
-      <div class="col-12 col-md-5 mb-3 fade-up" id="rt-box">
-        <a class="btn btn-outline-primary btn-lg w-100 py-3" href="specialties/rt/index.html">
-          📡 RT - Réseaux Télécom
+    <div class="row justify-content-center mt-4 g-3">
+      <div class="col-6 col-sm-5 col-md-4">
+        <a class="btn btn-outline-primary w-100 btn-lg" href="specialties/rt/index.html">
+          RT - Réseaux Télécom
         </a>
       </div>
-      <div class="col-12 col-md-5 mb-3 fade-up" id="st-box">
-        <a class="btn btn-outline-success btn-lg w-100 py-3" href="specialties/st/index.html">
-          🔧 ST - Systèmes de Télécommunication
+      <div class="col-6 col-sm-5 col-md-4">
+        <a class="btn btn-outline-success w-100 btn-lg" href="specialties/st/index.html">
+          ST - Systèmes de Télécommunication
         </a>
       </div>
     </div>
-  </main>
-
-  <script>
-    // Simple on-load animation
-    window.addEventListener('DOMContentLoaded', () => {
-      document.querySelectorAll('.fade-up').forEach(el => {
-        setTimeout(() => el.classList.add('visible'), 200);
-      });
-    });
-  </script>
+  </div>
 </body>
 </html>
