--- a/index.html
+++ b/index.html
@@ -19,17 +19,13 @@
     <h1 class="mb-4 text-primary">Telecom Course Portal</h1>
     <p class="lead">Select your specialty:</p>
 
-    <div class="row justify-content-center mt-4 g-3">
-      <div class="col-6 col-sm-5 col-md-4">
-        <a class="btn btn-outline-primary w-100 btn-lg" href="specialties/rt/index.html">
-          RT - Réseaux Télécom
-        </a>
-      </div>
-      <div class="col-6 col-sm-5 col-md-4">
-        <a class="btn btn-outline-success w-100 btn-lg" href="specialties/st/index.html">
-          ST - Systèmes de Télécommunication
-        </a>
-      </div>
+    <div class="d-grid gap-3 col-10 col-sm-8 col-md-6 mx-auto mt-4">
+      <a class="btn btn-outline-primary btn-lg" href="specialties/rt/index.html">
+        RT - Réseaux Télécom
+      </a>
+      <a class="btn btn-outline-success btn-lg" href="specialties/st/index.html">
+        ST - Systèmes de Télécommunication
+      </a>
     </div>
   </div>
 </body>
