--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes" />
+  <meta charset="UTF-8">
   <title>Telecom Courses</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  <style>
-    a.btn:hover {
-      transform: scale(1.05);
-      transition: transform 0.3s ease;
-    }
-  </style>
 </head>
-
-<body class="bg-light text-center py-4 px-3 px-md-5">
-  <div class="container">
+<body class="bg-light">
+  <div class="container vh-100 d-flex flex-column justify-content-center align-items-center text-center">
     <h1 class="mb-4 text-primary">Telecom Course Portal</h1>
-    <p class="lead">Select your specialty:</p>
-
-    <div class="d-grid gap-3 col-10 col-sm-8 col-md-6 mx-auto mt-4">
-      <a class="btn btn-outline-primary btn-lg" href="specialties/rt/index.html">
-        RT - Réseaux Télécom
-      </a>
-      <a class="btn btn-outline-success btn-lg" href="specialties/st/index.html">
-        ST - Systèmes de Télécommunication
-      </a>
+    <p class="lead mb-5">Select your specialty:</p>
+    
+    <div class="row w-100">
+      <div class="col-md-6 mb-4">
+        <a href="specialties/rt/index.html" class="btn btn-outline-primary btn-lg w-75 animate__animated animate__fadeInLeft">RT - Réseaux Télécom</a>
+      </div>
+      <div class="col-md-6 mb-4">
+        <a href="specialties/st/index.html" class="btn btn-outline-success btn-lg w-75 animate__animated animate__fadeInRight">ST - Systèmes de Télécommunication</a>
+      </div>
     </div>
   </div>
+
+  <!-- Optional: animate.css for button entry animation -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </body>
 </html>
