--- a/index.html
+++ b/index.html
@@ -5,24 +5,30 @@
   <title>Telecom Courses</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    .specialty-btn {
+      min-width: 200px;
+      max-width: 90%;
+    }
+  </style>
 </head>
-<body class="bg-light">
-  <div class="container vh-100 d-flex flex-column justify-content-center align-items-center text-center">
-    <h1 class="mb-4 text-primary">Telecom Course Portal</h1>
-    <p class="lead mb-5">Select your specialty:</p>
-    
-    <div class="row w-100">
-      <div class="col-md-6 mb-4">
-        <a href="specialties/rt/index.html" class="btn btn-outline-primary btn-lg w-75 animate__animated animate__fadeInLeft">RT - Réseaux Télécom</a>
-      </div>
-      <div class="col-md-6 mb-4">
-        <a href="specialties/st/index.html" class="btn btn-outline-success btn-lg w-75 animate__animated animate__fadeInRight">ST - Systèmes de Télécommunication</a>
-      </div>
+<body class="bg-light d-flex align-items-center justify-content-center" style="min-height: 100vh;">
+
+  <div class="container text-center px-3">
+    <h1 class="text-primary mb-3 animate__animated animate__fadeInDown">Telecom Course Portal</h1>
+    <p class="lead mb-4">Select your specialty:</p>
+
+    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center gap-3">
+      <a class="btn btn-outline-primary btn-lg specialty-btn animate__animated animate__fadeInLeft" href="specialties/rt/index.html">
+        RT - Réseaux Télécom
+      </a>
+      <a class="btn btn-outline-success btn-lg specialty-btn animate__animated animate__fadeInRight" href="specialties/st/index.html">
+        ST - Systèmes de Télécommunication
+      </a>
     </div>
   </div>
 
-  <!-- Optional: animate.css for button entry animation -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </body>
 </html>
