--- a/index.html
+++ b/index.html
@@ -1,34 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
   <title>Telecom Courses</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <!-- Google Fonts: Pixel-style font -->
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
   <style>
-    .specialty-btn {
-      min-width: 200px;
-      max-width: 90%;
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f8f9fa;
+    }
+
+    /* === 8-BIT SPLASH SCREEN === */
+    #splash-screen {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: #000;
+      color: #00ff00;
+      font-family: 'Press Start 2P', monospace;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      transition: opacity 1s ease;
+    }
+
+    #splash-screen h1 {
+      font-size: 16px;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+
+    .loading-bar {
+      width: 220px;
+      height: 20px;
+      background-color: #111;
+      border: 3px solid #00ff00;
+      box-shadow: 0 0 8px #00ff00;
+      display: flex;
+      overflow: hidden;
+    }
+
+    .loading-progress {
+      height: 100%;
+      width: 0%;
+      background-color: #00ff00;
+      transition: width 0.2s ease;
+    }
+
+    #splash-screen.fade-out {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    /* === Course Card Styling === */
+    .course-card {
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .course-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+    }
+
+    .card-title {
+      font-weight: 700;
+    }
+
+    /* === Footer === */
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      background-color: #e9ecef;
+      color: #6c757d;
+      text-align: center;
+      font-size: 14px;
     }
   </style>
 </head>
-<body class="bg-light d-flex align-items-center justify-content-center" style="min-height: 100vh;">
 
-  <div class="container text-center px-3">
-    <h1 class="text-primary mb-3 animate__animated animate__fadeInDown">Telecom Course Portal</h1>
-    <p class="lead mb-4">Select your specialty:</p>
+<body>
 
-    <div class="d-flex flex-column flex-md-row justify-content-center align-items-center gap-3">
-      <a class="btn btn-outline-primary btn-lg specialty-btn animate__animated animate__fadeInLeft" href="specialties/rt/index.html">
-        RT - Réseaux Télécom
-      </a>
-      <a class="btn btn-outline-success btn-lg specialty-btn animate__animated animate__fadeInRight" href="specialties/st/index.html">
-        ST - Systèmes de Télécommunication
-      </a>
+  <!-- 👾 Splash Screen -->
+  <div id="splash-screen">
+    <h1>LOADING TELECOM COURSES...</h1>
+    <div class="loading-bar">
+      <div class="loading-progress" id="progress-bar"></div>
     </div>
   </div>
 
+  <!-- 🌐 Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">📘 Telecom Courses</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Home</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- 🎓 Main Content -->
+  <div class="container text-center py-5">
+    <h1 class="mb-3 text-primary fw-bold">Telecom Courses Portal</h1>
+    <p class="lead mb-4">Choose your specialty:</p>
+
+    <div class="row justify-content-center">
+      <div class="col-md-5 mb-3">
+        <a href="specialties/rt/index.html" class="text-decoration-none">
+          <div class="card course-card border-primary">
+            <div class="card-body">
+              <h3 class="card-title text-primary">RT</h3>
+              <p class="card-text">Réseaux Télécom</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-5 mb-3">
+        <a href="specialties/st/index.html" class="text-decoration-none">
+          <div class="card course-card border-success">
+            <div class="card-body">
+              <h3 class="card-title text-success">ST</h3>
+              <p class="card-text">Systèmes de Télécommunication</p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- 📎 Footer -->
+  <footer>
+    Built by students, for students — Telecom 2025 📡
+  </footer>
+
+  <!-- JS Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- 🕹️ Splash Screen Animation -->
+  <script>
+    const splash = document.getElementById("splash-screen");
+    const progress = document.getElementById("progress-bar");
+
+    let percent = 0;
+    const interval = setInterval(() => {
+      percent += 2;
+      progress.style.width = percent + "%";
+
+      if (percent >= 100) {
+        clearInterval(interval);
+        splash.classList.add("fade-out");
+      }
+    }, 40); // total ~2s
+  </script>
 </body>
 </html>
