--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Google Fonts: Pixel-style font -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <!-- Inter Font (fallback for normal text) -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #f8f9fa;
+      background-color: #222; /* Dark grey */
+      color: #f5f5dc; /* Beige */
     }
 
-    /* === 8-BIT SPLASH SCREEN === */
+    /* === SPLASH SCREEN === */
     #splash-screen {
       position: fixed;
       top: 0; left: 0;
       width: 100vw;
       height: 100vh;
-      background-color: #000;
-      color: #00ff00;
+      background-color: #444;
+      color: #f5f5dc;
       font-family: 'Press Start 2P', monospace;
       display: flex;
       flex-direction: column;
@@ -42,9 +45,9 @@
     .loading-bar {
       width: 220px;
       height: 20px;
-      background-color: #111;
-      border: 3px solid #00ff00;
-      box-shadow: 0 0 8px #00ff00;
+      background-color: #333;
+      border: 3px dashed #f5f5dc;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
       display: flex;
       overflow: hidden;
     }
@@ -52,7 +55,7 @@
     .loading-progress {
       height: 100%;
       width: 0%;
-      background-color: #00ff00;
+      background-color: #f5f5dc;
       transition: width 0.2s ease;
     }
 
@@ -61,34 +64,78 @@
       pointer-events: none;
     }
 
-    /* === Course Card Styling === */
+    /* === Headings === */
+    h1, h3, .lead {
+      color: #f5f5dc;
+      font-family: 'Press Start 2P', monospace;
+    }
+
+    h1 {
+      font-size: 18px;
+    }
+
+    .lead {
+      font-size: 12px;
+    }
+
+    /* === Course Card === */
     .course-card {
       transition: transform 0.3s ease, box-shadow 0.3s ease;
+      background-color: #2c2c2c;
+      color: #f5f5dc;
+      border: 4px solid #f5f5dc;
+      border-radius: 8px;
+      font-family: 'Press Start 2P', monospace;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+      padding: 15px;
     }
 
     .course-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.5);
     }
 
-    .card-title {
-      font-weight: 700;
+    .course-card .card-title {
+      font-size: 18px;
+      margin-bottom: 10px;
+      color: #f5f5dc;
+    }
+
+    .course-card .card-text {
+      font-size: 10px;
+      color: #f5f5dc;
     }
 
     /* === Footer === */
     footer {
       margin-top: 40px;
       padding: 20px;
-      background-color: #e9ecef;
-      color: #6c757d;
+      background-color: #444;
+      color: #f5f5dc;
       text-align: center;
-      font-size: 14px;
+      font-size: 12px;
+      font-family: 'Press Start 2P', monospace;
+    }
+
+    /* === Navbar === */
+    .navbar {
+      background-color: #333 !important;
+    }
+
+    .navbar-brand,
+    .nav-link {
+      color: #f5f5dc !important;
+      font-family: 'Press Start 2P', monospace;
+      font-size: 12px;
+    }
+
+    .nav-link.active {
+      text-decoration: underline;
     }
   </style>
 </head>
 
 <body>
-
   <!-- 👾 Splash Screen -->
   <div id="splash-screen">
     <h1>LOADING TELECOM COURSES...</h1>
@@ -98,7 +145,7 @@
   </div>
 
   <!-- 🌐 Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">📘 Telecom Courses</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
@@ -116,15 +163,15 @@
 
   <!-- 🎓 Main Content -->
   <div class="container text-center py-5">
-    <h1 class="mb-3 text-primary fw-bold">Telecom Courses Portal</h1>
+    <h1 class="mb-3">Telecom Courses Portal</h1>
     <p class="lead mb-4">Choose your specialty:</p>
 
     <div class="row justify-content-center">
       <div class="col-md-5 mb-3">
         <a href="specialties/rt/index.html" class="text-decoration-none">
-          <div class="card course-card border-primary">
+          <div class="card course-card">
             <div class="card-body">
-              <h3 class="card-title text-primary">RT</h3>
+              <h3 class="card-title">RT</h3>
               <p class="card-text">Réseaux Télécom</p>
             </div>
           </div>
@@ -133,9 +180,9 @@
 
       <div class="col-md-5 mb-3">
         <a href="specialties/st/index.html" class="text-decoration-none">
-          <div class="card course-card border-success">
+          <div class="card course-card">
             <div class="card-body">
-              <h3 class="card-title text-success">ST</h3>
+              <h3 class="card-title">ST</h3>
               <p class="card-text">Systèmes de Télécommunication</p>
             </div>
           </div>
@@ -149,10 +196,10 @@
     Built by students, for students — Telecom 2025 📡
   </footer>
 
-  <!-- JS Scripts -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- 🕹️ Splash Screen Animation -->
+  <!-- 🕹️ Splash Screen JS -->
   <script>
     const splash = document.getElementById("splash-screen");
     const progress = document.getElementById("progress-bar");
@@ -166,7 +213,7 @@
         clearInterval(interval);
         splash.classList.add("fade-out");
       }
-    }, 40); // total ~2s
+    }, 40);
   </script>
 </body>
 </html>
