--- a/index.html
+++ b/index.html
@@ -2,60 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Telecom Courses</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Google Fonts: Pixel-style font -->
+  <!-- Retro Pixel Font -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <!-- Inter Font (fallback for normal text) -->
+  <!-- Fallback Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #222; /* Dark grey */
-      color: #f5f5dc; /* Beige */
+      background-color: #525252;
+      color: #525252;
     }
 
-    /* === SPLASH SCREEN === */
+    /* === Splash Screen === */
     #splash-screen {
       position: fixed;
       top: 0; left: 0;
       width: 100vw;
       height: 100vh;
-      background-color: #444;
-      color: #f5f5dc;
+      background-color: #525252;
+      color: #525252;
       font-family: 'Press Start 2P', monospace;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       z-index: 9999;
       transition: opacity 1s ease;
     }
 
-    #splash-screen h1 {
-      font-size: 16px;
-      margin-bottom: 30px;
-      text-align: center;
+    .splash-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .splash-wrapper h1 {
+      font-size: 14px;
+      margin-bottom: 10px;
+      text-align: left;
     }
 
     .loading-bar {
-      width: 220px;
-      height: 20px;
-      background-color: #333;
-      border: 3px dashed #f5f5dc;
+      width: 600px;
+      height: 32px;
+      background-color: #525252;
+      border: 2px dashed #f6d4b1;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-      display: flex;
       overflow: hidden;
     }
 
     .loading-progress {
       height: 100%;
       width: 0%;
-      background-color: #f5f5dc;
+      background-color: #f6d4b1;
       transition: width 0.2s ease;
     }
 
@@ -64,9 +68,8 @@
       pointer-events: none;
     }
 
-    /* === Headings === */
     h1, h3, .lead {
-      color: #f5f5dc;
+      color: #f6d4b1;
       font-family: 'Press Start 2P', monospace;
     }
 
@@ -78,16 +81,59 @@
       font-size: 12px;
     }
 
+    /* === Sidebar === */
+    #sidebarToggle {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      z-index: 10000;
+      background-color: #f6d4b1;
+      color: #525252;
+      font-family: 'Press Start 2P', monospace;
+      border: 2px solid #525252;
+      padding: 8px 12px;
+      font-size: 14px;
+    }
+
+    #sidebar {
+      position: fixed;
+      top: 0;
+      left: -260px;
+      height: 100vh;
+      width: 240px;
+      background-color: #e0b894;
+      color: #525252;
+      transition: left 0.3s ease;
+      z-index: 9999;
+      font-family: 'Press Start 2P', monospace;
+      box-shadow: 5px 0 15px rgba(0, 0, 0, 0.5);
+      padding: 20px;
+    }
+
+    #sidebar a {
+      display: block;
+      margin: 20px 0;
+      color: #525252;
+      text-decoration: none;
+      font-size: 10px;
+    }
+
+    #sidebar h4 {
+      font-size: 12px;
+      margin-bottom: 30px;
+    }
+
     /* === Course Card === */
     .course-card {
       transition: transform 0.3s ease, box-shadow 0.3s ease;
-      background-color: #2c2c2c;
-      color: #f5f5dc;
-      border: 4px solid #f5f5dc;
+      background-color: #f6d4b1;
+      color: #525252;
+      border: 4px solid #525252;
       border-radius: 8px;
       font-family: 'Press Start 2P', monospace;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
       padding: 15px;
+      height: 100%;
     }
 
     .course-card:hover {
@@ -98,68 +144,50 @@
     .course-card .card-title {
       font-size: 18px;
       margin-bottom: 10px;
-      color: #f5f5dc;
+      color: #525252;
     }
 
     .course-card .card-text {
       font-size: 10px;
-      color: #f5f5dc;
+      color: #525252;
     }
 
     /* === Footer === */
     footer {
       margin-top: 40px;
       padding: 20px;
-      background-color: #444;
-      color: #f5f5dc;
+      background-color: #e0b894;
+      color: #525252;
       text-align: center;
       font-size: 12px;
       font-family: 'Press Start 2P', monospace;
-    }
-
-    /* === Navbar === */
-    .navbar {
-      background-color: #333 !important;
-    }
-
-    .navbar-brand,
-    .nav-link {
-      color: #f5f5dc !important;
-      font-family: 'Press Start 2P', monospace;
-      font-size: 12px;
-    }
-
-    .nav-link.active {
-      text-decoration: underline;
     }
   </style>
 </head>
 
 <body>
-  <!-- 👾 Splash Screen -->
-  <div id="splash-screen">
-    <h1>LOADING TELECOM COURSES...</h1>
-    <div class="loading-bar">
-      <div class="loading-progress" id="progress-bar"></div>
-    </div>
+  <!-- 🔘 Sidebar Toggle Button -->
+  <button id="sidebarToggle">☰</button>
+
+  <!-- 📋 Sidebar Menu -->
+  <div id="sidebar">
+    <h4>📡 MENU</h4>
+    <a href="#">🏠 Home</a>
+    <a href="#about">📖 About</a>
+    <a href="specialties/rt/index.html">🔌 RT</a>
+    <a href="specialties/st/index.html">📶 ST</a>
+    <a href="#contact">✉️ Contact</a>
   </div>
 
-  <!-- 🌐 Navbar -->
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="#">📘 Telecom Courses</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarContent">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
-          </li>
-        </ul>
+  <!-- 👾 Splash Screen -->
+  <div id="splash-screen">
+    <div class="splash-wrapper">
+      <h1>LOADING TELECOM COURSES...</h1>
+      <div class="loading-bar">
+        <div class="loading-progress" id="progress-bar"></div>
       </div>
     </div>
-  </nav>
+  </div>
 
   <!-- 🎓 Main Content -->
   <div class="container text-center py-5">
@@ -167,10 +195,10 @@
     <p class="lead mb-4">Choose your specialty:</p>
 
     <div class="row justify-content-center">
-      <div class="col-md-5 mb-3">
-        <a href="specialties/rt/index.html" class="text-decoration-none">
-          <div class="card course-card">
-            <div class="card-body">
+      <div class="col-md-5 mb-3 d-flex">
+        <a href="specialties/rt/index.html" class="text-decoration-none w-100">
+          <div class="card course-card h-100">
+            <div class="card-body d-flex flex-column justify-content-center">
               <h3 class="card-title">RT</h3>
               <p class="card-text">Réseaux Télécom</p>
             </div>
@@ -178,10 +206,10 @@
         </a>
       </div>
 
-      <div class="col-md-5 mb-3">
-        <a href="specialties/st/index.html" class="text-decoration-none">
-          <div class="card course-card">
-            <div class="card-body">
+      <div class="col-md-5 mb-3 d-flex">
+        <a href="specialties/st/index.html" class="text-decoration-none w-100">
+          <div class="card course-card h-100">
+            <div class="card-body d-flex flex-column justify-content-center">
               <h3 class="card-title">ST</h3>
               <p class="card-text">Systèmes de Télécommunication</p>
             </div>
@@ -199,7 +227,7 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- 🕹️ Splash Screen JS -->
+  <!-- 🕹️ Splash Screen Logic -->
   <script>
     const splash = document.getElementById("splash-screen");
     const progress = document.getElementById("progress-bar");
@@ -213,7 +241,21 @@
         clearInterval(interval);
         splash.classList.add("fade-out");
       }
-    }, 40);
+    }, 25);
+  </script>
+
+  <!-- 📂 Sidebar Toggle -->
+  <script>
+    const sidebar = document.getElementById("sidebar");
+    const toggleButton = document.getElementById("sidebarToggle");
+
+    toggleButton.addEventListener("click", () => {
+      if (sidebar.style.left === "0px") {
+        sidebar.style.left = "-260px";
+      } else {
+        sidebar.style.left = "0px";
+      }
+    });
   </script>
 </body>
 </html>
