--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
       color: #525252;
     }
 
-    /* === Splash Screen === */
+    body.menu-open {
+      background-color: #f6d4b1;
+      color: #f6d4b1;
+    }
+
     #splash-screen {
       position: fixed;
       top: 0; left: 0;
@@ -45,13 +49,14 @@
       font-size: 14px;
       margin-bottom: 10px;
       text-align: left;
+      color: #f6d4b1;
     }
 
     .loading-bar {
       width: 600px;
       height: 32px;
       background-color: #525252;
-      border: 2px dashed #f6d4b1;
+      border: 1px dashed #f6d4b1;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
       overflow: hidden;
     }
@@ -81,33 +86,44 @@
       font-size: 12px;
     }
 
-    /* === Sidebar === */
-    #sidebarToggle {
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      z-index: 10000;
-      background-color: #f6d4b1;
-      color: #525252;
-      font-family: 'Press Start 2P', monospace;
-      border: 2px solid #525252;
-      padding: 8px 12px;
-      font-size: 14px;
+    .hidden {
+      display: none;
     }
 
     #sidebar {
       position: fixed;
       top: 0;
-      left: -260px;
+      left: -100vw;
       height: 100vh;
-      width: 240px;
+      width: 100vw;
       background-color: #e0b894;
       color: #525252;
       transition: left 0.3s ease;
       z-index: 9999;
       font-family: 'Press Start 2P', monospace;
       box-shadow: 5px 0 15px rgba(0, 0, 0, 0.5);
-      padding: 20px;
+      padding: 70px 20px 20px 20px;
+    }
+
+    #sidebarToggle {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      z-index: 1100;
+      background-color: #f6d4b1;
+      border: 2px solid #525252;
+      padding: 6px 20px;
+      cursor: pointer;
+      border-radius: 4px;
+      box-shadow: 0 8px 12px rgba(0, 0, 0, 0.25);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: auto;
+    }
+
+    #sidebarToggle svg rect {
+      height: 6px;
     }
 
     #sidebar a {
@@ -123,7 +139,6 @@
       margin-bottom: 30px;
     }
 
-    /* === Course Card === */
     .course-card {
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       background-color: #f6d4b1;
@@ -152,11 +167,10 @@
       color: #525252;
     }
 
-    /* === Footer === */
     footer {
       margin-top: 40px;
       padding: 20px;
-      background-color: #e0b894;
+      background-color: #f6d4b1;
       color: #525252;
       text-align: center;
       font-size: 12px;
@@ -164,22 +178,24 @@
     }
   </style>
 </head>
-
 <body>
-  <!-- 🔘 Sidebar Toggle Button -->
-  <button id="sidebarToggle">☰</button>
+  <button id="sidebarToggle" aria-label="Toggle menu">
+    <svg width="36" height="24" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <rect y="0" width="36" height="6" fill="#525252"/>
+      <rect y="9" width="36" height="6" fill="#525252"/>
+      <rect y="18" width="36" height="6" fill="#525252"/>
+    </svg>
+  </button>
 
-  <!-- 📋 Sidebar Menu -->
   <div id="sidebar">
-    <h4>📡 MENU</h4>
-    <a href="#">🏠 Home</a>
-    <a href="#about">📖 About</a>
-    <a href="specialties/rt/index.html">🔌 RT</a>
-    <a href="specialties/st/index.html">📶 ST</a>
-    <a href="#contact">✉️ Contact</a>
+    <h4>📱 MENU</h4>
+    <a href="#" class="sidebar-link">🏠 Home</a>
+    <a href="#about" class="sidebar-link">📖 About</a>
+    <a href="specialties/rt/index.html" class="sidebar-link">🔌 RT</a>
+    <a href="specialties/st/index.html" class="sidebar-link">📶 ST</a>
+    <a href="#contact" class="sidebar-link">✉️ Contact</a>
   </div>
 
-  <!-- 👾 Splash Screen -->
   <div id="splash-screen">
     <div class="splash-wrapper">
       <h1>LOADING TELECOM COURSES...</h1>
@@ -189,7 +205,6 @@
     </div>
   </div>
 
-  <!-- 🎓 Main Content -->
   <div class="container text-center py-5">
     <h1 class="mb-3">Telecom Courses Portal</h1>
     <p class="lead mb-4">Choose your specialty:</p>
@@ -219,18 +234,19 @@
     </div>
   </div>
 
-  <!-- 📎 Footer -->
   <footer>
-    Built by students, for students — Telecom 2025 📡
+    Built by students, for students — Telecom 2025 📱
   </footer>
 
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- 🕹️ Splash Screen Logic -->
   <script>
     const splash = document.getElementById("splash-screen");
     const progress = document.getElementById("progress-bar");
+    const toggleButton = document.getElementById("sidebarToggle");
+    const sidebar = document.getElementById("sidebar");
+    const sidebarLinks = document.querySelectorAll(".sidebar-link");
+    const body = document.body;
 
     let percent = 0;
     const interval = setInterval(() => {
@@ -240,20 +256,33 @@
       if (percent >= 100) {
         clearInterval(interval);
         splash.classList.add("fade-out");
+        splash.addEventListener("transitionend", () => {
+          toggleButton.classList.remove("hidden");
+        });
       }
     }, 25);
-  </script>
-
-  <!-- 📂 Sidebar Toggle -->
-  <script>
-    const sidebar = document.getElementById("sidebar");
-    const toggleButton = document.getElementById("sidebarToggle");
 
     toggleButton.addEventListener("click", () => {
-      if (sidebar.style.left === "0px") {
-        sidebar.style.left = "-260px";
-      } else {
-        sidebar.style.left = "0px";
+      const isOpen = sidebar.style.left === "0px";
+      sidebar.style.left = isOpen ? "-100vw" : "0px";
+      body.classList.toggle("menu-open", !isOpen);
+    });
+
+    sidebarLinks.forEach(link => {
+      link.addEventListener("click", () => {
+        sidebar.style.left = "-100vw";
+        body.classList.remove("menu-open");
+      });
+    });
+
+    document.addEventListener('click', (e) => {
+      if (
+        sidebar.style.left === "0px" &&
+        !sidebar.contains(e.target) &&
+        !toggleButton.contains(e.target)
+      ) {
+        sidebar.style.left = "-100vw";
+        body.classList.remove("menu-open");
       }
     });
   </script>
