--- a/index.html
+++ b/index.html
@@ -178,10 +178,12 @@
     }
 
     .loading-bar {
+      max-width: 90%;
       width: 600px;
       height: 32px;
       background-color: #525252;
       border: 2px dashed #f6d4b1;
+      margin: auto;
     }
 
     .loading-progress {
