--- a/index.html
+++ b/index.html
@@ -261,13 +261,14 @@
 <body>
   <div id="vhs-overlay"></div>
 
-  <button id="sidebarToggle" aria-label="Toggle menu">
-    <svg width="36" height="24" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <rect y="0" width="36" height="6"/>
-      <rect y="9" width="36" height="6"/>
-      <rect y="18" width="36" height="6"/>
-    </svg>
-  </button>
+<button id="sidebarToggle" aria-label="Toggle menu">
+  <svg width="36" height="24" viewBox="0 0 36 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+    <rect x="5.5" y="1" width="25" height="1" />
+    <rect x="5.5" y="11" width="25" height="1" />
+    <rect x="5.5" y="21" width="25" height="1" />
+  </svg>
+</button>
+
 
   <div id="sidebar">
     <h4>📱 MENU</h4>
