--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       );
     }
 
+    
     body {
       font-family: 'Inter', sans-serif;
       background-color: #f6d4b1;
@@ -118,7 +119,7 @@
     }
 
     h1, h3, .lead {
-      color: #525252;
+      color: #f6d4b1;
       font-family: 'Press Start 2P', monospace;
     }
 
@@ -178,12 +179,10 @@
     }
 
     .loading-bar {
-      max-width: 90%;
       width: 600px;
       height: 32px;
       background-color: #525252;
       border: 2px dashed #f6d4b1;
-      margin: auto;
     }
 
     .loading-progress {
@@ -193,6 +192,7 @@
       transition: width 0.2s ease;
     }
 
+    
     #splash-screen.fade-out {
       opacity: 0;
       pointer-events: none;
@@ -261,14 +261,13 @@
 <body>
   <div id="vhs-overlay"></div>
 
-<button id="sidebarToggle" aria-label="Toggle menu">
-  <svg width="36" height="24" viewBox="0 0 36 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-    <rect x="5.5" y="1" width="25" height="1" />
-    <rect x="5.5" y="11" width="25" height="1" />
-    <rect x="5.5" y="21" width="25" height="1" />
-  </svg>
-</button>
-
+  <button id="sidebarToggle" aria-label="Toggle menu">
+    <svg width="36" height="24" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <rect y="0" width="36" height="6"/>
+      <rect y="9" width="36" height="6"/>
+      <rect y="18" width="36" height="6"/>
+    </svg>
+  </button>
 
   <div id="sidebar">
     <h4>📱 MENU</h4>
