--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
       font-family: 'Press Start 2P', monospace;
     }
 
+    
     h1, h3, .lead {
-      color: #f6d4b1;
+      color: #;
       font-family: 'Press Start 2P', monospace;
     }
 
