--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
     }
 
     .course-card .card-title {
-      font-size: 18px;
+      font-size: 25px;
       margin-bottom: 10px;
     }
 
     .course-card .card-text {
-      font-size: 10px;
+      font-size: 15px;
     }
 
     #splash-screen {
@@ -249,7 +249,7 @@
       padding: 12px;
       color: #f6d4b1;
       text-align: center;
-      font-size: 10px;
+      font-size: 20px;
       text-decoration: none;
     }
 
@@ -271,13 +271,13 @@
   </button>
 
   <div id="sidebar">
-    <h4>📱 MENU</h4>
+    <h4>MENU</h4>
     <button id="closeSidebar" aria-label="Close menu">✖</button>
-    <a href="#">🏠 Home</a>
-    <a href="#about">📖 About</a>
-    <a href="specialties/rt/index.html">🔌 RT</a>
-    <a href="specialties/st/index.html">📶 ST</a>
-    <a href="#contact">✉️ Contact</a>
+    <a href="#">Home</a>
+    <a href="#about">About</a>
+    <a href="specialties/rt/index.html">RT</a>
+    <a href="specialties/st/index.html">ST</a>
+    <a href="#contact">Contacts</a>
   </div>
 
   <div id="splash-screen">
@@ -292,7 +292,7 @@
   <div class="container text-center py-5">
     <h1 class="mb-3">Telecom Courses Portal</h1>
     <div class="announcement-box">
-      🚨 Welcome to the Telecom Courses Portal! Explore modules and find your path 🚨
+      idk what to put in here for now
     </div>
     <p class="lead mb-4">Choose your specialty:</p>
 
@@ -322,7 +322,7 @@
   </div>
 
   <footer>
-    Built by students, for students — Telecom 2025 📱
+  Footer mmmh feet
   </footer>
 
   <script>
