--- a/index.html
+++ b/index.html
@@ -179,12 +179,15 @@
       margin-bottom: 10px;
     }
 
-    .loading-bar {
-      width: 600px;
-      height: 32px;
-      background-color: #525252;
-      border: 2px dashed #f6d4b1;
-    }
+.loading-bar {
+  width: 90%;
+  max-width: 600px;
+  height: 32px;
+  background-color: #525252;
+  border: 2px dashed #f6d4b1;
+  margin: 0 auto; /* center it */
+}
+
 
     .loading-progress {
       height: 100%;
