--- a/specialties/st/index.html
+++ b/specialties/st/index.html
@@ -87,8 +87,8 @@
 </head>
 <body>
   <div class="container text-center">
-    <h1>🖥️ ST - Systèmes Télécom</h1>
-    <p class="lead">Modules disponibles :</p>
+    <h1>ST - Systèmes Télécom</h1>
+    <p class="lead">Wch tsh9 l3ziz</p>
 
     <div class="module-list">
       <a href="#" class="module-item">Systèmes Numériques</a>
@@ -99,7 +99,7 @@
       <a href="#" class="module-item">Conception de Circuits</a>
     </div>
 
-    <a href="../../index.html" class="back-button">⬅ Retour à l'accueil</a>
+    <a href="../../index.html" class="back-button"> back to home</a>
   </div>
 </body>
 </html>
