--- a/specialties/rt/index.html
+++ b/specialties/rt/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>📡 RT - Réseaux Télécom</title>
+  <title>🖥️ ST - Systèmes Télécom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Bootstrap (optional) -->
@@ -87,19 +87,19 @@
 </head>
 <body>
   <div class="container text-center">
-    <h1>📡 RT - Réseaux Télécom</h1>
-    <p class="lead">Modules disponibles :</p>
+    <h1>RT - Réseaux Télécom</h1>
+    <p class="lead">Wch tsh9 l3ziz</p>
 
     <div class="module-list">
-      <a href="#" class="module-item">Transmission Numérique</a>
-      <a href="#" class="module-item">Transmission Numérique</a>
-      <a href="#" class="module-item">Transmission Numérique</a>
-      <a href="#" class="module-item">Transmission Numérique</a>
-      <a href="#" class="module-item">Réseaux Informatiques</a>
-      <a href="#" class="module-item">Commutation</a>
+      <a href="#" class="module-item">Systèmes Numériques</a>
+      <a href="#" class="module-item">Traitement du Signal</a>
+      <a href="#" class="module-item">Systèmes Embarqués</a>
+      <a href="#" class="module-item">Microcontrôleurs</a>
+      <a href="#" class="module-item">Électronique Numérique</a>
+      <a href="#" class="module-item">Conception de Circuits</a>
     </div>
 
-    <a href="../../index.html" class="back-button">⬅ Retour à l'accueil</a>
+    <a href="../../index.html" class="back-button"> back to home</a>
   </div>
 </body>
 </html>
