--- a/specialties/rt/index.html
+++ b/specialties/rt/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>🖥️ ST - Systèmes Télécom</title>
+  <title>🖥️ S Systèmes Télécom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Bootstrap (optional) -->
@@ -87,16 +87,18 @@
 </head>
 <body>
   <div class="container text-center">
-    <h1>RT - Réseaux Télécom</h1>
+    <h1>ST - Systèmes Télécom</h1>
     <p class="lead">Wch tsh9 l3ziz</p>
 
     <div class="module-list">
-      <a href="#" class="module-item">Systèmes Numériques</a>
-      <a href="#" class="module-item">Traitement du Signal</a>
-      <a href="#" class="module-item">Systèmes Embarqués</a>
-      <a href="#" class="module-item">Microcontrôleurs</a>
-      <a href="#" class="module-item">Électronique Numérique</a>
-      <a href="#" class="module-item">Conception de Circuits</a>
+      <a href="#" class="module-item">Communication numérique avancée</a>
+      <a href="#" class="module-item">Routage IP</a>
+      <a href="#" class="module-item">Traitement de signal avancé</a>
+      <a href="#" class="module-item">Systéme linux</a>
+      <a href="#" class="module-item">Normes et protocoles</a>
+      <a href="#" class="module-item">Python Oritenté objets</a>
+      <a href="#" class="module-item">Anglais technique et terminologie</a>
+      <a href="#" class="module-item">Traveaux pratiques</a>
     </div>
 
     <a href="../../index.html" class="back-button"> back to home</a>
