--- a/specialties/st/s2.html
+++ b/specialties/st/s2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,49 +17,6 @@
     body.menu-open {
   background-color: #525252;
   color: #f6d4b1;
-}
-
-.modal-overlay {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100vw; height: 100vh;
-  background-color: rgba(0, 0, 0, 0.85);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 11000;
-}
-
-.modal-box {
-  background-color: #525252;
-  color: #f6d4b1;
-  padding: 30px;
-  border: 2px dashed #f6d4b1;
-  font-family: 'Press Start 2P', monospace;
-  text-align: center;
-  max-width: 90vw;
-}
-
-.modal-buttons {
-  margin-top: 20px;
-}
-
-.modal-buttons button,
-.close-btn {
-  background-color: #f6d4b1;
-  color: #525252;
-  font-family: 'Press Start 2P', monospace;
-  border: none;
-  margin: 10px;
-  padding: 10px 20px;
-  cursor: pointer;
-  transition: all 0.2s ease;
-}
-
-.modal-buttons button:hover,
-.close-btn:hover {
-  background-color: #fff;
-  color: #000;
 }
 
 #sidebar {
@@ -215,22 +173,21 @@
 </div>
 
   <div class="container text-center">
-    <h1>RT - Réseaux et Télécommunication</h1>
+    <h1>ST - Systèmes Télécom</h1>
     <p class="lead">Wch tsh9 l3ziz</p>
 
     <div class="module-list">
-      <a href="#" class="module-item">Communication numérique avancée</a>
-      <a href="#" class="module-item">Routage IP</a>
-      <a href="#" class="module-item">Traitement de signal avancé</a>
-      <a href="#" class="module-item">Systéme linux</a>
-      <a href="#" class="module-item">Normes et protocoles</a>
-      <a href="#" class="module-item">Python Oritenté objets</a>
-      <a href="#" class="module-item">Anglais technique et terminologie</a>
-      <a href="#" class="module-item">Traveaux pratiques</a>
+      <a href="#" class="module-item">Systèmes Numériques</a>
+      <a href="#" class="module-item">Traitement du Signal</a>
+      <a href="#" class="module-item">Systèmes Embarqués</a>
+      <a href="#" class="module-item">Microcontrôleurs</a>
+      <a href="#" class="module-item">Électronique Numérique</a>
+      <a href="#" class="module-item">Conception de Circuits</a>
     </div>
 
     <a href="../../index.html" class="back-button"> back to home</a>
   </div>
+
   <script>
   const toggleButton = document.getElementById("sidebarToggle");
   const sidebar = document.getElementById("sidebar");
@@ -257,6 +214,7 @@
     }
   });
 </script>
+
 
 </body>
 </html>
