--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -207,10 +207,11 @@
   <div id="sidebar">
     <h4>MENU</h4>
     <button id="closeSidebar" aria-label="Close menu">✖</button>
-    <a href="index.html">Home</a>
-    <a href="#" data-specialty="rt">RT</a>
-    <a href="#" data-specialty="st">ST</a>
-    <a href="contact.html">Contact</a>
+    <a href="../../index.html"><i class="fas fa-home"></i> Home</a>
+    <a href="#about"><i class="fas fa-info-circle"></i> About</a>
+    <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
+    <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
+    <a href="/telecom-courses/pages/contact/index.html"><i class="fas fa-envelope"></i> Contacts</a>
   </div>
 
 <!-- Main content -->
